CW_rugby/rugby_k73092al/fback.txt
Submission ran but did not finish its execution due to the errors below. 
This does not mean the program did not execute however, it may or may not have produced some files or none: 

   File "***Removed due to privacy***/rugby_k73092al/./rugby_k73092al.py", line 15
    
    ^
IndentationError: expected an indented block

No files were created within the results folder. (This does not mean files were not created elsewhere)
